Bugfix: overflow for display

--- a/calculator-angular/src/app/calculator/calculator.component.scss
+++ b/calculator-angular/src/app/calculator/calculator.component.scss
@@ -16,6 +16,7 @@ $color-red-700: #C53030;
   height: 64px;
   transition-duration: 300ms;
   user-select: none;
+  width: 100%;
 }
 
 .calculator__element--small {
